--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,17 @@
 # API Configuration
 NEXT_PUBLIC_API_BASE_URL=https://api.serenenow.in
 
+# For development, you might use:
+# NEXT_PUBLIC_API_BASE_URL=http://localhost:3000/api
+
 # Razorpay Configuration (for payments)
 NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_test_your_key_id
 RAZORPAY_KEY_SECRET=your_secret_key
 
 # Other environment variables
 NEXT_PUBLIC_APP_URL=https://serenenow.in
+
+# Add your other environment variables here
+# DATABASE_URL=
+# JWT_SECRET=
+# EMAIL_SERVICE_API_KEY=
